; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/libertas/extr_cmd.c_lbs_cmd_fwt_access.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/libertas/extr_cmd.c_lbs_cmd_fwt_access.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cmd_ds_command = type { i64, i8*, i8*, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.cmd_ds_fwt_access }
%struct.cmd_ds_fwt_access = type { i8* }

@LBS_DEB_CMD = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [10 x i8] c"action %d\00", align 1
@CMD_FWT_ACCESS = common dso_local global i64 0, align 8
@S_DS_GEN = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cmd_ds_command*, i64, i8*)* @lbs_cmd_fwt_access to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lbs_cmd_fwt_access(%struct.cmd_ds_command* %0, i64 %1, i8* %2) #0 {
  %4 = alloca %struct.cmd_ds_command*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.cmd_ds_fwt_access*, align 8
  store %struct.cmd_ds_command* %0, %struct.cmd_ds_command** %4, align 8
  store i64 %1, i64* %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load %struct.cmd_ds_command*, %struct.cmd_ds_command** %4, align 8
  %9 = getelementptr inbounds %struct.cmd_ds_command, %struct.cmd_ds_command* %8, i32 0, i32 3
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  store %struct.cmd_ds_fwt_access* %10, %struct.cmd_ds_fwt_access** %7, align 8
  %11 = load i32, i32* @LBS_DEB_CMD, align 4
  %12 = load i64, i64* %5, align 8
  %13 = call i32 @lbs_deb_enter_args(i32 %11, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i64 %12)
  %14 = load i64, i64* @CMD_FWT_ACCESS, align 8
  %15 = call i8* @cpu_to_le16(i64 %14)
  %16 = load %struct.cmd_ds_command*, %struct.cmd_ds_command** %4, align 8
  %17 = getelementptr inbounds %struct.cmd_ds_command, %struct.cmd_ds_command* %16, i32 0, i32 2
  store i8* %15, i8** %17, align 8
  %18 = load i64, i64* @S_DS_GEN, align 8
  %19 = add i64 8, %18
  %20 = call i8* @cpu_to_le16(i64 %19)
  %21 = load %struct.cmd_ds_command*, %struct.cmd_ds_command** %4, align 8
  %22 = getelementptr inbounds %struct.cmd_ds_command, %struct.cmd_ds_command* %21, i32 0, i32 1
  store i8* %20, i8** %22, align 8
  %23 = load %struct.cmd_ds_command*, %struct.cmd_ds_command** %4, align 8
  %24 = getelementptr inbounds %struct.cmd_ds_command, %struct.cmd_ds_command* %23, i32 0, i32 0
  store i64 0, i64* %24, align 8
  %25 = load i8*, i8** %6, align 8
  %26 = icmp ne i8* %25, null
  br i1 %26, label %27, label %31

27:                                               ; preds = %3
  %28 = load %struct.cmd_ds_fwt_access*, %struct.cmd_ds_fwt_access** %7, align 8
  %29 = load i8*, i8** %6, align 8
  %30 = call i32 @memcpy(%struct.cmd_ds_fwt_access* %28, i8* %29, i32 8)
  br label %34

31:                                               ; preds = %3
  %32 = load %struct.cmd_ds_fwt_access*, %struct.cmd_ds_fwt_access** %7, align 8
  %33 = call i32 @memset(%struct.cmd_ds_fwt_access* %32, i32 0, i32 8)
  br label %34

34:                                               ; preds = %31, %27
  %35 = load i64, i64* %5, align 8
  %36 = call i8* @cpu_to_le16(i64 %35)
  %37 = load %struct.cmd_ds_fwt_access*, %struct.cmd_ds_fwt_access** %7, align 8
  %38 = getelementptr inbounds %struct.cmd_ds_fwt_access, %struct.cmd_ds_fwt_access* %37, i32 0, i32 0
  store i8* %36, i8** %38, align 8
  %39 = load i32, i32* @LBS_DEB_CMD, align 4
  %40 = call i32 @lbs_deb_leave(i32 %39)
  ret i32 0
}

declare dso_local i32 @lbs_deb_enter_args(i32, i8*, i64) #1

declare dso_local i8* @cpu_to_le16(i64) #1

declare dso_local i32 @memcpy(%struct.cmd_ds_fwt_access*, i8*, i32) #1

declare dso_local i32 @memset(%struct.cmd_ds_fwt_access*, i32, i32) #1

declare dso_local i32 @lbs_deb_leave(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
